samples/_failures_safe/1761044180_cdf11d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9f2dd58f.c: In function ‘main’:
./samples/SAFE/__tmp_9f2dd58f.c:137:12: error: missing terminating " character
  137 |     printf("Decomp
      |            ^~~~~~~
./samples/SAFE/__tmp_9f2dd58f.c:137:5: error: expected expression at end of input
  137 |     printf("Decomp
      |     ^~~~~~
./samples/SAFE/__tmp_9f2dd58f.c:137:5: error: expected declaration or statement at end of input
